# msa-architecture

./: .gitignore  README.md  crete-cluster.yaml  istio-operator.yaml  service.yaml
.github/workflows/: django.yml  fastapi.yml  flask.yml
FC/: communicate_pods.yaml  communicate_pods_red.yaml  env_var.yaml
django/: .gitignore  Dockerfile  dockerfile  pyproject.toml  requirements.txt
django/helloworld/: settings.py  urls.py
django/user/: models.py
fastapi/: dockerfile  main.py  pyproject.toml  requirements.txt
fastapi/dash/: pyproject.toml
fastapi/dash/tests/: test_dash.py
flask/: dockerfile  helloworld.py  pyproject.toml
shell/: aws_cli_AutoUpdate&aws_cli_AutoCompleter.sh  install_etc_utils.sh  install_k9s.sh  kubectl_install.sh
terraform/: ecr.tf  eks-setup.tf  eks.tf  main.tf  var.tfvars  variable.tf  vpc-setup.tf  vpc.tf
