[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["lot8229 <lot8229@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.88.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
